--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
+  </head>
+  <body>
+    <div
+      style="
+        background-color: aquamarine;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+      "
+    >
+      <img src="../image/github.gif" height="50" alt="" srcset="" />
+    </div>
 
-    <h1 style="text-align:center"> hello </h1>
-
-</body>
+    <h1 style="text-align: center">hello</h1>
+  </body>
 </html>
