--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,19 @@
     >
       <img src="../image/github.gif" height="50" alt="" srcset="" />
     </div>
+    <img
+      style="display: inline"
+      src="../image/javascript.png"
+      height="40"
+      width="40"
+    />
+    <img src="../image/react.png" height="50" width="55" />
+    <img src="../image/react-native.png" height="45" width="55" />
+    <img src="../image/redux.png" height="45" width="55" />
+    <img src="../image/node.png" height="45" width="55" />
+    <img src="../image/express.png" height="45" width="55" />
+    <img src="../image/socketio.png" height="45" width="55" />
+    <img src="../image/webRTC.png" height="45" width="55" />
 
     <h1 style="text-align: center">hello</h1>
   </body>
